# ADA-lab-Programs-

./: EXP10_QUICK_SORT.c  EXP3B_WARSHALLS.c  EXP4_DIJKSTRAS.c  EXP5_TOPOLOGICAL_SORT.c  EXP7_GREEDY_KNAPSACK.c  README.md
Documents/VScode/Code/ADA/: EXP1.C  (+11 more)
Documents/VScode/Code/Hear_my_Case/backend/: .env.example  API_DOCUMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  alembic.ini  init_db.py  pyproject.toml  requirements.txt  test_cases_api.py
Documents/VScode/Code/Hear_my_Case/backend/app/: __init__.py  config.py  dependencies.py  main.py
Documents/VScode/Code/Hear_my_Case/backend/app/api/: __init__.py  admin.py  auth.py  cases.py  demo.py  evidence.py  notifications.py  users.py
Documents/VScode/Code/Hear_my_Case/backend/app/auth/: __init__.py  jwt_handler.py  otp_handler.py  rbac.py
Documents/VScode/Code/Hear_my_Case/backend/app/db/: __init__.py  database.py
Documents/VScode/Code/Hear_my_Case/backend/app/middleware/: __init__.py
Documents/VScode/Code/Hear_my_Case/backend/app/models/: __init__.py  case.py  evidence.py  group.py  lawyer.py  ngo.py  notification.py  user.py
Documents/VScode/Code/Hear_my_Case/backend/app/schemas/: __init__.py  auth.py  cases.py  evidence.py  notifications.py  resources.py  users.py
Documents/VScode/Code/Hear_my_Case/backend/app/services/: __init__.py  ai.py  demo.py  evidence.py  notifications.py  ocr.py  sms.py  storage.py
Documents/VScode/Code/Hear_my_Case/backend/tests/: conftest.py  test_ai_service.py  test_demo.py  test_ocr.py  test_schemas.py  test_sms.py  test_storage.py
(+14 files in other folders)
