[tool.poetry]
name = "hear-my-case-backend"
version = "1.0.0"
description = "Legal case management platform for workers in India"
authors = ["HEAR MY CASE Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
bcrypt = "^4.1.1"
PyJWT = "^2.8.1"
anthropic = "^0.7.10"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
redis = "^5.0.1"
boto3 = "^1.34.0"
python-dotenv = "^1.0.0"
twilio = "^8.10.0"
pypdf = "^5.0.0"
Pillow = "^10.0.0"
pytesseract = "^0.3.10"
python-dateutil = "^2.8.2"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
